build responsive for iphone

--- a/src/app/e-grammar/e-grammar.component.scss
+++ b/src/app/e-grammar/e-grammar.component.scss
@@ -56,13 +56,16 @@
         width: 100%;
         margin: auto;
     }
-    .btn.btn-lg {
-        padding: 1rem 1.0rem;
-        font-size: 0.94rem;
+
+    .btn.btn-lg[_ngcontent-c2] {
+            padding: 1rem 1.0rem;
+            font-size: 0.8rem;
     }
+    
     .pt-4[_ngcontent-c2] {
-        padding-top: 6rem !important;
+        padding-top: 1rem !important;
     }
+
 
  }
 
@@ -76,8 +79,8 @@
         width: 70%;
         margin: auto;
     }
-    .pt-4[_ngcontent-c2] {
-        padding-top: 9rem !important;
+    .pt-4 {
+        padding-top: 7rem !important;
     }
  }
 
@@ -92,7 +95,7 @@
         margin: auto;
     }
     .pt-4[_ngcontent-c2] {
-        padding-top: 9rem !important;
+        padding-top: 4rem !important;
     }
  }
 
