--- a/src/app/e-grammar/tense-detail/tense-detail.component.scss
+++ b/src/app/e-grammar/tense-detail/tense-detail.component.scss
@@ -51,16 +51,34 @@
         justify-content: space-between;
         padding: 0.5rem 0.5rem;
     }
-    .input-group {
-        width: 100%;
-        margin: auto;
+    .input-group .form-control {
+        margin: 0;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 1.2rem;
     }
     .btn.btn-lg {
         padding: 1rem 1.0rem;
-        font-size: 0.94rem;
+        font-size: 0.50rem;
     }
-    .pt-4[_ngcontent-c2] {
-        padding-top: 6rem !important;
+    .lead {
+        font-size: 1rem;
+        font-weight: 300;
+    }
+    .h1-responsive {
+        font-size: 100%;
+    }
+    .btn {
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+        padding: 0.56rem 1.14rem;
+        font-size: 0.65rem;
+        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        /* margin: 0.375rem; */
+        border-radius: 0.5rem;
+        cursor: pointer;
+        text-transform: uppercase;
+        white-space: normal;
+        word-wrap: break-word;
     }
 
  }
@@ -89,9 +107,6 @@
         /* align-items: center; */
         width: 70%;
         margin: auto;
-    }
-    .pt-4[_ngcontent-c2] {
-        padding-top: 9rem !important;
     }
  }
 
