--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
     padding-top: 40rem !important;
 }
 .view {
-    background: url("https://cdn.pixabay.com/photo/2015/05/05/17/56/vancouver-754204_960_720.jpg")no-repeat center center;
+    background: url("/assets/images/vancouver.jpg") no-repeat center center;
     background-size: cover;
 }
 @media (min-width: 768px) {
