add forgot password and change color

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,6 +31,14 @@
                     <button class="btn btn-default" type="submit">Login</button>
                 </div>
               </form>
+
+              <div class="text-center mt-4">
+                <hr>
+              </div>
+              <div class="text-right mt-4">
+                  <span>Not a member? <a style="color:#0d47a1">SignUp</a></span><br>
+                  <span class="mt-4">Forgot <a style="color:#0d47a1">password?</a> </span>
+                </div>
             <!-- Material form login -->
             </div>
           </div>
