--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,7 @@
-
-
  <div class="container">
       <div class="row">
-        <div class="col-xl-5 col-lg-6 col-md-10 col-sm-12 mx-auto mt-5">
-          <div class=" card wow fadeIn animated" data-wow-delay="0.3s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.3s">
+        <div class="col-xl-5 mx-auto mt-5">
+          <div class="card wow fadeIn animated">
           <!-- Material form login -->
             <div class="card-body">
               <form name="form" (ngSubmit) = "f.form.valid && login()" #f="ngForm" novalidate>
@@ -55,7 +53,7 @@
                 <hr>
               </div>
               <div class="text-right mt-4">
-                  <span>Not a member? <a  style="color:#0d47a1">SignUp</a></span><br>
+                  <span>Not a member? <a [routerLink]="['/register']" style="color:#0d47a1">SignUp</a></span><br>
                   <span class="mt-4">Forgot <a  style="color:#0d47a1">password?</a> </span>
                 </div>
             <!-- Material form login -->
