fixed the fixed nav bar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <!--Main Navigation-->
 <header>
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark primary-color-dark scrolling-navbar">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark indigo text-center">
       <a class="navbar-brand" routerLink="/home"><strong><h2>English tutorials</h2></strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
