--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,7 +3,7 @@
 }
 @media (min-width: 320px) {
     .navbar {
-        position: relative;
+        //position: relative;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
@@ -26,7 +26,7 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) { 
     .input-group {
-        position: relative;
+        //position: relative;
         display: flex;
         flex-wrap: wrap;
         /* align-items: center; */
@@ -41,7 +41,7 @@
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) { 
     .input-group {
-        position: relative;
+        //position: relative;
         display: flex;
         flex-wrap: wrap;
         /* align-items: center; */
