fixed login, register page, and add 7 more lessons to intermediate reading

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,4 +2,8 @@
     background-color: #0d47a1 !important
 }
 .danger-text {
-    color: #ff3547; }
+    color: #ff3547; 
+}
+.mt-5{
+    padding-top:20vh;
+}
