--- a/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.html
+++ b/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.html
@@ -7,7 +7,13 @@
         </audio>
         <div class="header__title">
                 {{question.title}}
-            </div>
+                <div>
+                    <button class="btn btn-primary btn-sm">
+                        Reading {{page.index}} of {{page.num-1}}
+                    </button>
+                </div>
+
+        </div>
           
           <div class="body" [innerHTML] ="question.content" ></div>
       </div>
@@ -16,7 +22,7 @@
 <footer class="footer-copyright fixed-bottom ">
     <div class = "blue py-3 text-center text-white">
     <i class="fa fa-fast-backward pr-5 fa-lg" (click)="goto(0)"></i>
-    <i class="fa fa-backward pr-5 fa-lg" (click)="goto(page.index -1)"></i>
+    <i class="fa fa-backward pr-5 fa-lg" (click)="goto(page.index - 1)"></i>
     <i class="fa fa-forward pr-5 fa-lg" (click)="goto(page.index + 1)"></i>
     <i class="fa fa-fast-forward fa-lg" (click)="goto(page.num-1)"></i>
     </div>
