add spiner, and add more lesson on america database

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,7 +72,9 @@
           <button type="button" class="btn btn-round btn-outline-default" mdbWavesEffect>
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/login">LOG IN &emsp;<i class="fa fa-sign-in"></i></a>
+                    <a *ngIf="logout" class="nav-link" routerLink="/login">LOG IN &emsp;<i class="fa fa-sign-in"></i></a>
+                    <a *ngIf="login" class="nav-link" routerLink="/login">LOGOUT &emsp;<i class="fa fa-sign-out"></i></a>
+
                 </li>
             </ul>
           </button>
