--- a/src/app/reading/i-reading/i-reading-menu/i-reading-menu.component.html
+++ b/src/app/reading/i-reading/i-reading-menu/i-reading-menu.component.html
@@ -1,20 +1,21 @@
 <div class="center pt-15">
-  <div class="container pb-4">
+  <div *ngIf="loading === false" class="container pb-4">
     <div class="row">
       <div class="col-4">
         <hr>
       </div>
       <div class="col-4 text-center">
-          <h1>{{lessons.title}}</h1>
+          <h1>{{lessonCate}}</h1>
         </div>
         <div class="col-4">
             <hr>
           </div>
     </div>
   </div>
-  <div   class="table-responsive ">
-      <table class="table">
-        <thead class="black white-text">
+  <div  class="table-responsive ">
+      <img *ngIf="loading" src="assets/images/Ripple.gif" />
+      <table *ngIf="loading === false" class="table">
+        <thead class="primary-color-dark white-text">
           <tr>
             <th>ID</th>
             <th>Title</th>
@@ -22,12 +23,13 @@
             <th>% Test</th>
           </tr>
         </thead>
+        
         <tbody>
-          <tr mdbTableCol *ngFor="let lesson of lessonsArr" class="title" [routerLink]="['/i-reading-detail',lessons.title,lesson.id]">
+          <tr mdbTableCol *ngFor="let lesson of lessonsArr" class="title" [routerLink]="['/i-reading-detail',lesson.category,lesson.id]">
             <th scope="row">{{lesson.id}}</th>
             <th >{{lesson.title}}</th>
-            <th>0%</th>
-            <th>0%</th>
+            <th>{{lesson.percentAssume}}%</th>
+            <th>{{lesson.percentActual}}%</th>
           </tr>
         </tbody>
       </table>
