fixed logout, and studentId is add to login

--- a/src/app/e-grammar/e-grammar.component.html
+++ b/src/app/e-grammar/e-grammar.component.html
@@ -1,4 +1,5 @@
 <div class="container" >
+    <app-header></app-header>
         <div class="btn-group pt-4 ml-15">
             <button class="btn btn-primary btn-lg dropdown-toggle" 
                     type="button" 
