--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <main>
+    <app-header></app-header>
     <!-- <div class="container" style="height:1300px;">
       <section class="text-center feature-box pt-5"> -->
           <div class="view intro-2 pt-30">
