--- a/src/app/reading/i-reading/i-reading.component.html
+++ b/src/app/reading/i-reading/i-reading.component.html
@@ -1,4 +1,6 @@
 <div class="container pt-6">
+    <app-header></app-header>
+
     <div class="row">
       <div class="col-4"><hr size="90"></div>
       <div class="col-4"><h4 class="text-center text-info">{{categories.title}}</h4></div>
