--- a/src/app/reading/i-reading/i-reading-menu/i-reading-menu.component.html
+++ b/src/app/reading/i-reading/i-reading-menu/i-reading-menu.component.html
@@ -1,4 +1,6 @@
 <div class="center pt-15">
+    <app-header></app-header>
+
   <div *ngIf="loading === false" class="container pb-4">
     <div class="row">
       <div class="col-4">
