--- a/src/app/reading/i-reading/i-reading.component.html
+++ b/src/app/reading/i-reading/i-reading.component.html
@@ -1,15 +1,15 @@
 <div class="container pt-6">
     <app-header></app-header>
-
+    <img class="loading" *ngIf="loading" src="assets/images/Ripple.gif" />
     <div class="row">
-      <div class="col-4"><hr size="90"></div>
-      <div class="col-4"><h4 class="text-center text-info">{{categories.title}}</h4></div>
-      <div class="col-4"><hr size="90"></div>
+      <div *ngIf="!loading" class="col-4"><hr size="90"></div>
+      <div class="col-4"><h4 class="text-center text-info">{{title}}</h4></div>
+      <div *ngIf="!loading" class="col-4"><hr size="90"></div>
     </div>
     <div class="row pt-4">
       <div class="col-4 pb-4" *ngFor="let cate of categoriesArr">
         <div class="thumbnail">
-          <div [routerLink]="['/i-reading-menu',cate.id]">
+          <div [routerLink]="['/i-reading-menu',cate.categoryId]">
               <img src="{{cate.src_img}}" alt="" class="img-fluid z-depth-2 img-thumbnail">
               <div class="caption">
                 <h3>
