--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -64,11 +64,11 @@
                 </div>
               </li>
           </ul>
-          <form class="form-inline waves-light" mdbWavesEffect>
+          <!-- <form class="form-inline waves-light" mdbWavesEffect>
               <div class="md-form mt-45">
                   <input class="form-control mr-sm-20" type="text" placeholder="Search">
               </div>
-          </form>
+          </form> -->
           <button type="button" class="btn btn-round btn-outline-default" mdbWavesEffect>
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
