--- a/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.html
+++ b/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+    <app-header></app-header>
       <div *ngFor="let question of lesson;">
         <audio controls class="header__audio">
             <source src="#" type="audio/ogg">
