--- a/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.scss
+++ b/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.scss
@@ -43,5 +43,11 @@ $color-grey-dark: black;
 
 
 
+.loading {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 
 
