--- a/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.scss
+++ b/src/app/reading/i-reading/i-reading-detail/i-reading-detail.component.scss
@@ -3,6 +3,9 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-grey-dark: black;
 
+.main{
+    text-align: center;
+}
 .header__title{
         display:block;
         width: 100%;
@@ -40,9 +43,21 @@ $color-grey-dark: black;
     margin-bottom: 7rem;
     
 }
-
-
-
+.blue-gradient{
+    color: #514A9D;
+}
+.btn-rounded{
+    border-radius: 15px;
+}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+    width:50%;
+    z-index: 1;
+}
 .loading {
     display: block;
     margin-left: auto;
@@ -50,4 +65,17 @@ $color-grey-dark: black;
     width: 50%;
 }
 
+@media only screen 
+    and (max-width: 640px), 
+    only screen and (max-width: 667px), 
+    only screen and (max-width: 480px)
+{ 
+    .centered{
+        position: relative;
+        margin-top: 77%;
+        left: 50%;
+        margin-bottom:2%;
+        width: 95%;
+    }
+}
 
