aware laptop broken

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,17 +23,17 @@
           <div class="row my-4">
               <!--Grid column-->
               <div class="col-lg-4 col-md-12">
-                  <img src="assets/images/bechi1.jpg" class="img-fluid z-depth-2 rounded" alt="First sample image">
+                  <img src="assets/images/bechi.jpg" class="img-fluid z-depth-2 rounded" alt="First sample image">
               </div>
                <!--Grid column-->
               <div class="col-lg-4 col-md-6">
-                  <img src="assets/images/bechi2.jpg" class="img-fluid z-depth-3 rounded" alt="First sample image">
+                  <img src="assets/images/bechi0.jpg" class="img-fluid z-depth-3 rounded" alt="First sample image">
               </div>
               <div class="col-lg-4 col-md-6">
-                  <img src="assets/images/bechi3.jpg" class="img-fluid z-depth-4 rounded" alt="First sample image">
+                  <img src="assets/images/bechi2.jpg" class="img-fluid z-depth-4 rounded" alt="First sample image">
               </div>
           </div>
-          <!--Grid row-->
+          <!-- Grid row
           <div class="row my-4">
               <div class="col-lg-4 col-md-12">
                   <img src="assets/images/bechi4.jpg" class="img-fluid z-depth-2 rounded" alt="First sample image">
@@ -57,7 +57,7 @@
                   <img src="assets/images/bechi6.jpg" class="img-fluid z-depth-4 rounded" alt="First sample image">
               </div>
             
-          </div>
+          </div> -->
 
   </main>
   
